package com.jetpackcompose.playground.common.presentation.utils

object TestConstants {
    const val REALM_TASK_LIST_ADD_NEW_TASK_BUTTON = "addTaskExtendedFloatingActionButton"
    const val REALM_TASK_LIST_NO_TASK_FOUND_TEXT = "NoTasksFound"
    const val REALM_ADD_TASK_TITLE = "NewTaskTitle"
    const val REALM_ADD_TASK_ADD_BUTTON = "NewTaskAddTaskButton"
    const val REALM_ADD_TASK_CANCEL_BUTTON = "NewTaskCancelTaskButton"

    const val ROOM_TASK_LIST_ADD_NEW_TASK_BUTTON = "addTaskExtendedFloatingActionButton"
    const val ROOM_TASK_LIST_NO_TASK_FOUND_TEXT = "NoTasksFound"
    const val ROOM_ADD_TASK_TITLE = "NewTaskTitle"
    const val ROOM_ADD_TASK_ADD_BUTTON = "NewTaskAddTaskButton"
    const val ROOM_ADD_TASK_CANCEL_BUTTON = "NewTaskCancelTaskButton"
}